# cooking-ai

./: README.md
cooking-ai-app-layer/: .env.example  Dockerfile  README.md  requirements.txt  run.py
cooking-ai-app-layer/app/: __init__.py  errors.py  routes.py
cooking-ai-app-layer/tests/: test_routes.py
cooking-ai-data-layer/: .env.example  README.md  pyproject.toml  requirements.txt
cooking-ai-data-layer/cooking_ai_data_layer/: __init__.py  config.py  data_model_layer.py  embedding_search.py  local_llm_service.py  youtube_service.py
cooking-ai-data-layer/cooking_ai_data_layer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cooking-ai-data-layer/cooking_ai_data_layer/data/: recipes.json  substitutions.json
cooking-ai-data-layer/examples/: app_layer_example.py
cooking-ai-data-layer/tests/: test_integration.py
cooking-ai-frontend/: README.md  index.html
cooking-ai-frontend/css/: style.css
cooking-ai-frontend/js/: app.js  config.js
